[package]
name = "seq-macro"
version = "0.1.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macro to repeat sequentially indexed copies of a fragment of code."
repository = "https://github.com/dtolnay/seq-macro"
documentation = "https://docs.rs/seq-macro"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaround"]
